--- a/scaleway/testdata/flexible-ip-basic.cassette.yaml
+++ b/scaleway/testdata/flexible-ip-basic.cassette.yaml
@@ -2,27 +2,27 @@
 version: 1
 interactions:
 - request:
-    body: '{"project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","tags":[],"server_id":null,"reverse":null}'
+    body: '{"project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","tags":null,"server_id":null,"reverse":null,"is_ipv6":false}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips
     method: POST
   response:
-    body: '{"id":"02b0a05b-4b5c-47ae-b899-5f66f8da673d","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","updated_at":"2022-01-06T13:32:57.618966676Z","created_at":"2021-07-21T08:31:20.705707Z","status":"ready","tags":[],"ip_address":"51.159.125.25","server_id":null,"reverse":"","mac_address":null}'
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063067Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"51-159-124-44.rev.poneytelecom.eu.","mac_address":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "365"
+      - "417"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:57 GMT
+      - Mon, 20 Jun 2022 10:04:35 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 8292430b-7d8c-4295-9a96-a97116d74fbf
+      - 8f6aa42f-46d9-420f-8acd-e131412106b7
     status: 200 OK
     code: 200
     duration: ""
@@ -41,21 +41,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: GET
   response:
-    body: '{"id":"02b0a05b-4b5c-47ae-b899-5f66f8da673d","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","updated_at":"2022-01-06T13:32:57.618967Z","created_at":"2021-07-21T08:31:20.705707Z","status":"ready","tags":[],"ip_address":"51.159.125.25","server_id":null,"reverse":"","mac_address":null}'
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"","mac_address":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "362"
+      - "380"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:57 GMT
+      - Mon, 20 Jun 2022 10:04:35 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 29ce7a2c-5d06-4df9-bb9f-4b9f5974526e
+      - 24454848-8b14-4ccc-9a57-f9f1b43c348d
     status: 200 OK
     code: 200
     duration: ""
@@ -74,21 +74,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: GET
   response:
-    body: '{"id":"02b0a05b-4b5c-47ae-b899-5f66f8da673d","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","updated_at":"2022-01-06T13:32:57.618967Z","created_at":"2021-07-21T08:31:20.705707Z","status":"ready","tags":[],"ip_address":"51.159.125.25","server_id":null,"reverse":"","mac_address":null}'
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"","mac_address":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "362"
+      - "380"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:57 GMT
+      - Mon, 20 Jun 2022 10:04:35 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1d0fc726-c6d5-49f4-bf6c-e73b55d49371
+      - b0601ddf-e5f1-4fd0-bd7d-510f7d14b732
     status: 200 OK
     code: 200
     duration: ""
@@ -107,21 +107,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: GET
   response:
-    body: '{"id":"02b0a05b-4b5c-47ae-b899-5f66f8da673d","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","updated_at":"2022-01-06T13:32:57.618967Z","created_at":"2021-07-21T08:31:20.705707Z","status":"ready","tags":[],"ip_address":"51.159.125.25","server_id":null,"reverse":"","mac_address":null}'
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"","mac_address":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "362"
+      - "380"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:57 GMT
+      - Mon, 20 Jun 2022 10:04:35 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - fd9dd485-88d1-45af-8527-9672529f1972
+      - 45da3939-817b-42e2-a719-4736aab9cec6
     status: 200 OK
     code: 200
     duration: ""
@@ -140,21 +140,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: GET
   response:
-    body: '{"id":"02b0a05b-4b5c-47ae-b899-5f66f8da673d","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","updated_at":"2022-01-06T13:32:57.618967Z","created_at":"2021-07-21T08:31:20.705707Z","status":"ready","tags":[],"ip_address":"51.159.125.25","server_id":null,"reverse":"","mac_address":null}'
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"","mac_address":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "362"
+      - "380"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:58 GMT
+      - Mon, 20 Jun 2022 10:04:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -164,7 +164,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - da0cc647-ed19-4e5f-835a-7738d353a3d1
+      - aeb7afe6-e1eb-4b22-9217-2e724bfcd138
     status: 200 OK
     code: 200
     duration: ""
@@ -173,21 +173,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: GET
   response:
-    body: '{"id":"02b0a05b-4b5c-47ae-b899-5f66f8da673d","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","updated_at":"2022-01-06T13:32:57.618967Z","created_at":"2021-07-21T08:31:20.705707Z","status":"ready","tags":[],"ip_address":"51.159.125.25","server_id":null,"reverse":"","mac_address":null}'
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"","mac_address":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "362"
+      - "380"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:58 GMT
+      - Mon, 20 Jun 2022 10:04:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -197,7 +197,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b41c5ca8-620d-421d-80fd-5c66be24a875
+      - 1f815164-7ff9-4a1c-bc95-021f04d32fee
     status: 200 OK
     code: 200
     duration: ""
@@ -206,21 +206,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: GET
   response:
-    body: '{"id":"02b0a05b-4b5c-47ae-b899-5f66f8da673d","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","description":"","updated_at":"2022-01-06T13:32:57.618967Z","created_at":"2021-07-21T08:31:20.705707Z","status":"ready","tags":[],"ip_address":"51.159.125.25","server_id":null,"reverse":"","mac_address":null}'
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"","mac_address":null,"zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "362"
+      - "380"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:58 GMT
+      - Mon, 20 Jun 2022 10:04:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -230,7 +230,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ba8c149e-a014-4c4c-9592-64129fcd0dae
+      - 80111b5e-9366-4a9e-8aaf-e6d4db9a6667
     status: 200 OK
     code: 200
     duration: ""
@@ -239,9 +239,42 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
+    method: GET
+  response:
+    body: '{"id":"627a59a6-56cd-427e-8db5-564e9e7e1f45","organization_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","project_id":"564aa517-68b0-4fd7-8c8c-d21c4bcdcbd5","description":"","updated_at":"2022-06-20T10:04:35.743063Z","created_at":"2021-07-21T08:31:17.311155Z","status":"ready","tags":[],"ip_address":"51.159.124.44","server_id":null,"reverse":"","mac_address":null,"zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "380"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Mon, 20 Jun 2022 10:04:36 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - a2557cf0-d55c-4065-9ece-b09037989052
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: DELETE
   response:
     body: ""
@@ -251,7 +284,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:58 GMT
+      - Mon, 20 Jun 2022 10:04:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -261,7 +294,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2518d6a7-5379-4090-9bfa-4c80a615ad1a
+      - df1194ad-4143-43e3-84b9-b883c6d69585
     status: 204 No Content
     code: 204
     duration: ""
@@ -270,9 +303,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.5; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/02b0a05b-4b5c-47ae-b899-5f66f8da673d
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
     method: GET
   response:
     body: '{"details":[{"action":"read","resource":"flexible-ip"}],"message":"insufficient
@@ -285,7 +318,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 06 Jan 2022 13:32:59 GMT
+      - Mon, 20 Jun 2022 10:04:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -295,7 +328,41 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 00fa02c0-df69-4aea-9853-7d3b7eace130
+      - 2169ddff-4933-4cbf-b3e9-adc8ffcfbe60
+    status: 403 Forbidden
+    code: 403
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.3; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/flexible-ip/v1alpha1/zones/fr-par-1/fips/627a59a6-56cd-427e-8db5-564e9e7e1f45
+    method: GET
+  response:
+    body: '{"details":[{"action":"read","resource":"flexible-ip"}],"message":"insufficient
+      permissions","type":"permissions_denied"}'
+    headers:
+      Content-Length:
+      - "121"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Mon, 20 Jun 2022 10:04:36 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 9b955f21-641e-4f12-a0b2-212729ae1b0b
     status: 403 Forbidden
     code: 403
     duration: ""
