feat(iam): group: find datasource by name fails (orga ID nil in request)

--- a/scaleway/testdata/data-source-iam-group-basic.cassette.yaml
+++ b/scaleway/testdata/data-source-iam-group-basic.cassette.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"tf-group--exciting-mclaren","description":""}'
+    body: '{"organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":""}'
     form: {}
     headers:
       Content-Type:
@@ -13,10 +13,10 @@ interactions:
     url: https://api.scaleway.com/iam/v1alpha1/groups
     method: POST
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:45.676990Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"tf-group--exciting-mclaren","description":"","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "276"
+      - "264"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ebf42980-94fe-4bd9-842b-6790fa762ee9
+      - 49477192-ed33-4dea-8cff-bea9274da329
     status: 200 OK
     code: 200
     duration: ""
@@ -43,46 +43,13 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: GET
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:45.676990Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"tf-group--exciting-mclaren","description":"","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "276"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Fri, 24 Jun 2022 19:06:45 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 1211d4c6-09f7-4507-a1a1-4761047c47d4
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
-    method: GET
-  response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:45.676990Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"tf-group--exciting-mclaren","description":"","user_ids":[],"application_ids":[]}'
-    headers:
-      Content-Length:
-      - "276"
+      - "264"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -98,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 84bc5018-e23c-4169-87d5-4b34818991db
+      - 775a296e-1b5e-4474-a161-fe0d48017119
     status: 200 OK
     code: 200
     duration: ""
@@ -109,13 +76,13 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: GET
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:45.676990Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"tf-group--exciting-mclaren","description":"","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "276"
+      - "264"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -131,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 80c761a4-7c76-45b2-923e-a3ef9e2823d0
+      - 870f43af-4d3b-4e66-a77c-f47c6936bea6
     status: 200 OK
     code: 200
     duration: ""
@@ -142,13 +109,13 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: GET
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:45.676990Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"tf-group--exciting-mclaren","description":"","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "276"
+      - "264"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -164,27 +131,57 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 60357a03-93f1-49c7-b375-85baed8213e0
+      - dff28836-a798-4103-9df7-87383048917c
     status: 200 OK
     code: 200
     duration: ""
 - request:
-    body: '{"name":"iam_group_basic","description":"basic description"}'
+    body: ""
     form: {}
     headers:
-      Content-Type:
-      - application/json
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
-    method: PATCH
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
+    method: GET
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:47.108349Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"iam_group_basic","description":"basic
-      description","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "282"
+      - "264"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Fri, 24 Jun 2022 19:06:46 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 72bc181d-8c80-4987-83c1-e80d661c52b4
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
+    method: GET
+  response:
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
+    headers:
+      Content-Length:
+      - "264"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -200,7 +197,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ff08a5ee-3872-451e-8a45-5c2276d7ae39
+      - a244fa20-be99-4ed9-b8bb-bd25a9774396
     status: 200 OK
     code: 200
     duration: ""
@@ -211,14 +208,13 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: GET
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:47.108349Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"iam_group_basic","description":"basic
-      description","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "282"
+      - "264"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -234,7 +230,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 6b33dd37-4dd3-4527-a6c7-1d8847d8babb
+      - 84d4a914-2492-4231-bc54-279c4035e068
     status: 200 OK
     code: 200
     duration: ""
@@ -245,14 +241,13 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: GET
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:47.108349Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"iam_group_basic","description":"basic
-      description","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "282"
+      - "264"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -268,7 +263,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b7b5c33e-9f07-480c-a855-549cc128d809
+      - 4e6867c9-dc7b-48f3-8807-53853ff4a551
     status: 200 OK
     code: 200
     duration: ""
@@ -279,14 +274,47 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: GET
   response:
-    body: '{"id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","created_at":"2022-06-24T19:06:45.676990Z","updated_at":"2022-06-24T19:06:47.108349Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"iam_group_basic","description":"basic
-      description","user_ids":[],"application_ids":[]}'
+    body: '{"id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","created_at":"2022-06-24T19:06:45.683233Z","updated_at":"2022-06-24T19:06:45.683233Z","organization_id":"08555df8-bb26-43bc-b749-1b98c5d02343","name":"test-terraform","description":"","user_ids":[],"application_ids":[]}'
     headers:
       Content-Length:
-      - "282"
+      - "264"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Fri, 24 Jun 2022 19:06:47 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - f12b201b-f7b3-4f73-8700-a235db6738ed
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/iam/v1alpha1/groups?name=test-terraform&order_by=created_at_asc
+    method: GET
+  response:
+    body: '{"details":[{"argument_name":"organization_id","help_message":"","reason":"required"}],"message":"invalid
+      argument(s)","type":"invalid_arguments"}'
+    headers:
+      Content-Length:
+      - "146"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
@@ -302,9 +330,9 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a00b8ee4-9f1a-4790-bc5f-bbe1a674d141
-    status: 200 OK
-    code: 200
+      - 14c9ebcc-c2d8-45b7-b28a-7a4d54b8cef6
+    status: 400 Bad Request
+    code: 400
     duration: ""
 - request:
     body: ""
@@ -313,7 +341,7 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: DELETE
   response:
     body: ""
@@ -333,7 +361,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 140f8f82-63a1-45c2-be0c-e7a595cf6365
+      - 5472c090-faf3-4e74-919e-be951f6478f6
     status: 204 No Content
     code: 204
     duration: ""
@@ -344,10 +372,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/iam/v1alpha1/groups/d991e89e-50a1-4920-bf2f-6c420fbd04d9
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"group","resource_id":"d991e89e-50a1-4920-bf2f-6c420fbd04d9","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"group","resource_id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","type":"not_found"}'
     headers:
       Content-Length:
       - "126"
@@ -366,7 +394,40 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - d4c6a5c8-cf99-4b4c-9aae-44ab73c6a516
+      - 4bdb61cb-4bbc-4ddc-9571-bec3993fc44a
+    status: 404 Not Found
+    code: 404
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18.1; linux; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/iam/v1alpha1/groups/15e897bd-dd3a-4df2-a9bc-325255be8e68
+    method: GET
+  response:
+    body: '{"message":"resource is not found","resource":"group","resource_id":"15e897bd-dd3a-4df2-a9bc-325255be8e68","type":"not_found"}'
+    headers:
+      Content-Length:
+      - "126"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Fri, 24 Jun 2022 19:06:48 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - b0422dd2-752f-49fa-99a4-83e78bb401f5
     status: 404 Not Found
     code: 404
     duration: ""
